tests/error/bit_cast_padding5.bz
// error: value type '[u16, u8]' and result type '[u8, u16]' have incompatible paddings in bit cast
// note: value type has a padding of 1 byte at offset 3, but result type doesn't
function test()
{
	let t: [u16, u8] = [ 0, 0 ];
	let _ = __builtin_bit_cast([u8, u16], t);
}
